--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-starter-netlify-cms",
-  "description": "Example Gatsby, and Netlify CMS project",
-  "version": "1.1.3",
-  "author": "Austin Green",
+  "name": "wanderingleafstudios-gatsby",
+  "description": "Wandering Leaf Studios website built with GatsbyJS and Netlify CMS",
+  "version": "3.0.0",
+  "author": "Chris J Mears <chris.mears@gmail.com>",
   "dependencies": {
     "bulma": "^0.7.0",
     "gatsby": "^2.13.31",
@@ -33,7 +33,10 @@
     "uuid": "^3.2.1"
   },
   "keywords": [
-    "gatsby"
+    "gatsby",
+    "netlify-cms",
+    "bulma",
+    "sass"
   ],
   "license": "MIT",
   "main": "n/a",
