chore: Update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,14 @@
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
 .cache/
+
 # Build directory
 public/
+
+# Netlify
 static/admin/*.bundle.*
+.netlify/state.json
+
 .DS_Store
 yarn-error.log
 npm-debug.log
