--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "author": "Chris J Mears <chris.mears@gmail.com>",
   "dependencies": {
     "bulma": "^0.7.0",
-    "gatsby": "^2.13.31",
+    "gatsby": "^2.19.21",
     "gatsby-image": "^2.0.23",
+    "gatsby-plugin-google-analytics": "^2.1.36",
     "gatsby-plugin-netlify": "^2.0.6",
     "gatsby-plugin-netlify-cms": "^4.1.6",
     "gatsby-plugin-purgecss": "^4.0.0",
@@ -24,7 +25,7 @@
     "netlify-cms-app": "^2.9.6",
     "netlify-cms-media-library-cloudinary": "^1.3.2",
     "netlify-cms-media-library-uploadcare": "^0.5.2",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.13.1",
     "parcel-bundler": "^1.9.4",
     "prop-types": "^15.6.0",
     "react": "^16.8.4",
